Added BotMessages Names
Added the ability to give BotMessages names and icons. This will enable
the Bot to mascerade as another user, usefull for intergrations. This
does disable its permissions however.

--- a/src/SlackConnector.Tests.Integration/SlackConnector.Tests.Integration.csproj
+++ b/src/SlackConnector.Tests.Integration/SlackConnector.Tests.Integration.csproj
@@ -64,9 +64,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="Configuration\config.default.json" />
-    <None Include="Configuration\config.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <None Include="Configuration\config.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
